--- a/admin/src/main/resources/bootstrap.yml
+++ b/admin/src/main/resources/bootstrap.yml
@@ -8,7 +8,21 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 192.168.80.121:8848
+        server-addr: 123.249.79.20:8848
         prefix: swh
         file-extension: yml
+    # 配置sentinel
+    sentinel:
+      transport:
+        dashboard: 123.249.79.20:8858
+        port: 8719
+      datasource:
+        rl:
+          nacos:
+            server-addr: 123.249.79.20:8848
+            data-id: sentinel
+            group-id: DEFAULT_GROUP
+            rule-type: flow
+
+
 
